Attempt to fix stretching navbar in mobile notes

--- a/app/pages/revision/notes-viewer/notes-viewer.css
+++ b/app/pages/revision/notes-viewer/notes-viewer.css
@@ -1,5 +1,11 @@
 .notesviewer-main {
-  height: 100%;
-  width: 100%;
+  overflow-wrap: break-word;
+  position: absolute;
+  top: 3.25rem;
+  width: 100vw;
   padding: 16px;
+}
+
+.is-non-extending {
+  max-width: 100vw;
 }
